# joyjoy

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  sandbox.toml
backend/: README.md  conftest.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0c8958cb468f_baseline_schema.py  1532bcfac7d5_baseline_schema.py
backend/app/: __init__.py  agent.py  agent_common.py  auth.py  config.py  constants.py  context.py  dbfs.py  enums.py  main.py  mcp_runtime.py  media.py  memory_store.py  persistence.py  prompts.py  runs.py  sandbox.py  sandbox_backend.py  sessions.py  skills_store.py  timeutils.py  users.py  usersettings.py  workspace.py  workspace_sandbox.py
backend/app/agent/: agent.py  agent_common.py  middleware.py  prompts.py  runs.py
backend/app/core/: auth.py  config.py  constants.py  observability.py  textutils.py
backend/app/db/: __init__.py  crypto.py  engine.py  models.py  seed.py
backend/app/routes/: __init__.py  auth.py  chat.py  deps.py  health.py  mcp.py  memory.py  models.py  runs.py  sessions.py  settings_ui.py  skills.py  workspace.py
backend/app/sandbox/: sandbox.py  sandbox_backend.py  workspace_sandbox.py
backend/app/stores/: dbfs.py  mcp_runtime.py  memory_store.py  persistence.py  sessions.py  skills_store.py  users.py  usersettings.py
backend/app/workspace/: media.py  workspace.py
backend/mcp_servers/: joyjoy_demo.py
backend/scripts/: build_global_skills_seed.py  dump_global_seed_sql.py
backend/tests/: test_prompts.py
docs/: RUNNING.md  (+1 more)
(+173 files in other folders)
